2003-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmDebug/Makefile.am:
	* FvwmGtk/Makefile.am:
	do not install FvwmGtk.1 if FvwmGtk is not built
	same for FvwmGtkDebug and FvwmGtkDebug.1

2003-06-17  Dan Espen  <dane@mk.telcordia.com>

	* FvwmGtk/FvwmGtk.c (process_message): Off by one patch from
	Anil Madhavapeddy.

2003-06-15  Mikhael Goikhman  <migo@homemail.com>

	* FvwmDebug/FvwmGtkDebug.in:
	use new module method emulateEvent

2003-06-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIdent/FvwmIdent.c (ProcessXEvent):
	fixed initial drawing without a colour set

2003-06-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmDebug/FvwmDebug.in:
	* FvwmDebug/FvwmDebug.1:
	* FvwmDebug/FvwmGtkDebug.in:
	* FvwmDebug/FvwmGtkDebug.1:
	make 2 modules behave consistently regarding --mask, --debug;
	several more improvements

2003-06-06  olicha  <olivier.chapuis@free.fr>

	* FvwmBanner/FvwmBanner.c (main):
	Set msg mask to M_CONFIG_INFO | M_END_CONFIG_INFO to fix a
	"Failed to write descriptor to module" bug

2003-06-06  Mikhael Goikhman  <migo@homemail.com>

	* FvwmDebug/FvwmDebug.in:
	* FvwmDebug/FvwmDebug.1:
	added new options: --noevents, --xconsole, --debug, --track

	* FvwmPerl/FvwmPerl.in:
	fixed parsing of quotes in preprocess action

2003-06-05  olicha  <olivier.chapuis@free.fr>

	* FvwmButtons/FvwmButtons.h (struct button_info_struct):
	Fixed button geometry if width or height > 255

2003-06-03  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/Goodies.c (ShowTipWindow):
	Fixed drawing Tips under certains circonstance

2003-06-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/Makefile.am (LDADD):
	Fixed building FvwmScript under cygwin; patch by Francis Litterio

2003-05-28  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.1:
	* FvwmTaskBar/Start.c (StartButtonInit):
	Fixed no launch buttons if there are defined before the Start button
	New option NoDefaultStartButton

	* FvwmTaskBar/Goodies.c (CreateOrUpdateGoodyGC):
	(GoodiesParseConfig):